[refactor](fe) Carry Iceberg metadata credentials in serialized FileIO
### What problem does this PR solve?

Issue Number: N/A

Related PR: #67470

Problem Summary: Azure metadata tasks previously depended on native reader credentials copied into the JNI Hadoop channel and a BE Java resolver that reflectively replaced all-manifests FileIO. Bind REST scoped metadata SAS through the existing provider bridge before task serialization, reject conflicting scopes, and retain the original official Iceberg FileIO. Forward only actual Hadoop execution configuration for metadata tasks, preserving HadoopFileIO and the authentication wrapper. Carry known fixed SAS expiry separately in optional Thrift field 13 and reject expired tasks at scanner open without echoing credentials. Remove the old resolver and replace reflection-based tests with real planned tasks and packaged-scanner loopback reads, including multi-batch map/array output.

### Release note

Azure Iceberg metadata tasks retain their planned FileIO credentials without native Azure Hadoop sideband rebinding. Known expired fixed SAS credentials are diagnosed before task execution; genuine Hadoop configuration and materialized metadata rows keep their existing paths.

### Check List (For Author)

- Test: Unit Test
    - run-fe-ut.sh on the complete migration worktree: 26 classes, 438 tests, zero failures/errors/skips; actual per-class XML agrees with the execution log.
    - Packaged scanner tests exercise cold all_manifests, files and entries reads through the official Azure Java SDK against a loopback fixture, plus materialized manifests/snapshots and fixed-credential expiry.
    - Previously executed run-be-ut.sh subset: 103 tests passed, including all five C++ JNI expiry/configuration forwarding tests; C++ code has not changed since that run.
    - build.sh --fe --be-java-extensions, Java Checkstyle, clang-format 16 for the four P7 C++ files, build hygiene and git diff --check passed.
    - clang-tidy remains unpass